Generar Lista desde Map en Notificador Default